<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_btn_text">This button will launch my Spotify app!</string>
    <string name="scores_btn_text">This button will launch my Scores app!</string>
    <string name="library_btn_text">This button will launch my Library app!</string>
    <string name="build_bigger_btn_text">This button will launch my Build it Bigger app!</string>
    <string name="xyz_reader_btn_text">This button will launch my Xyz Reader app!</string>
    <string name="capstone_btn_text">This button will launch my Capstone app!</string>

</resources>
