<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        style="@style/TitleTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/title"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/spotifyBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/spotify_streamer"/>

    <Button
        android:id="@+id/scoresBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/scores_app"/>

    <Button
        android:id="@+id/libraryBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/library_app"/>

    <Button
        android:id="@+id/buildBiggerBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/xyzReaderBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/xyz_reader"/>

    <Button
        android:id="@+id/capstoneBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/capstone_button_color"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/capstone"/>

</LinearLayout>
</LinearLayout>
